--- a/examples/70_blackwell_gemm/CMakeLists.txt
+++ b/examples/70_blackwell_gemm/CMakeLists.txt
@@ -46,6 +46,18 @@ cutlass_example_add_executable(
 target_compile_definitions(70_blackwell_fp16_gemm_256x256x128_2x1x1 PRIVATE MS_M=_256 MS_K=_128 CS_M=_2 CS_N=_1)
 
 cutlass_example_add_executable(
+  70_blackwell_fp16_gemm_256x256x128_2x1x1_hacking
+  70_blackwell_fp16_gemm.cu
+  TEST_COMMAND_OPTIONS
+  TEST_SWIZZLE_1
+  TEST_SWIZZLE_2
+  TEST_SWIZZLE_5
+  TEST_SWIZZLE_5_UNEVEN
+)
+target_compile_definitions(70_blackwell_fp16_gemm_256x256x128_2x1x1_hacking PRIVATE MS_M=_256 MS_K=_128 CS_M=_2 CS_N=_1)
+target_compile_definitions(70_blackwell_fp16_gemm_256x256x128_2x1x1_hacking PRIVATE CUTLASS_UNIT_TEST_PIPELINE=1 HACK_GEMM_WRITE_SLM_ONCE=1)
+
+cutlass_example_add_executable(
   70_blackwell_fp16_gemm_128x256x128_1x1x1
   70_blackwell_fp16_gemm.cu
   TEST_COMMAND_OPTIONS
