--- a/examples/70_blackwell_gemm/CMakeLists.txt
+++ b/examples/70_blackwell_gemm/CMakeLists.txt
@@ -46,6 +46,17 @@ cutlass_example_add_executable(
 target_compile_definitions(70_blackwell_fp16_gemm_256x256x128_2x1x1 PRIVATE MS_M=_256 MS_K=_128 CS_M=_2 CS_N=_1)
 
 cutlass_example_add_executable(
+  70_blackwell_fp16_gemm_256x256x128_2x1x1_noLoadC
+  70_blackwell_fp16_gemm.cu
+  TEST_COMMAND_OPTIONS
+  TEST_SWIZZLE_1
+  TEST_SWIZZLE_2
+  TEST_SWIZZLE_5
+  TEST_SWIZZLE_5_UNEVEN
+)
+target_compile_definitions(70_blackwell_fp16_gemm_256x256x128_2x1x1_noLoadC PRIVATE MS_M=_256 MS_K=_128 CS_M=_2 CS_N=_1 NO_LOAD_C)
+
+cutlass_example_add_executable(
   70_blackwell_fp16_gemm_256x256x128_4x4x1
   70_blackwell_fp16_gemm.cu
   TEST_COMMAND_OPTIONS
@@ -57,7 +68,7 @@ cutlass_example_add_executable(
 target_compile_definitions(70_blackwell_fp16_gemm_256x256x128_4x4x1 PRIVATE MS_M=_256 MS_K=_128 CS_M=_4 CS_N=_4)
 
 cutlass_example_add_executable(
-  70_blackwell_fp16_gemm_256x256x128_2x1x1_load_once
+  70_blackwell_fp16_gemm_256x256x128_2x1x1_loadAbOnce
   70_blackwell_fp16_gemm.cu
   TEST_COMMAND_OPTIONS
   TEST_SWIZZLE_1
@@ -65,8 +76,20 @@ cutlass_example_add_executable(
   TEST_SWIZZLE_5
   TEST_SWIZZLE_5_UNEVEN
 )
-target_compile_definitions(70_blackwell_fp16_gemm_256x256x128_2x1x1_load_once
+target_compile_definitions(70_blackwell_fp16_gemm_256x256x128_2x1x1_loadAbOnce
     PRIVATE MS_M=_256 MS_K=_128 CS_M=_2 CS_N=_1 CUTLASS_UNIT_TEST_PIPELINE=1 HACK_GEMM_WRITE_SLM_ONCE=1)
+
+cutlass_example_add_executable(
+  70_blackwell_fp16_gemm_256x256x128_2x1x1_loadAbOnce_noLoadC
+  70_blackwell_fp16_gemm.cu
+  TEST_COMMAND_OPTIONS
+  TEST_SWIZZLE_1
+  TEST_SWIZZLE_2
+  TEST_SWIZZLE_5
+  TEST_SWIZZLE_5_UNEVEN
+)
+target_compile_definitions(70_blackwell_fp16_gemm_256x256x128_2x1x1_loadAbOnce_noLoadC
+    PRIVATE MS_M=_256 MS_K=_128 CS_M=_2 CS_N=_1 CUTLASS_UNIT_TEST_PIPELINE=1 HACK_GEMM_WRITE_SLM_ONCE=1 NO_LOAD_C)
 
 cutlass_example_add_executable(
   70_blackwell_fp8_gemm_256x256x128_2x1x1
