--- a/scripts/cutlass_profiler/bash/batch_profile.cfg
+++ b/scripts/cutlass_profiler/bash/batch_profile.cfg
@@ -11,7 +11,7 @@ start_delay=5
 # FREQUENCY SETTINGS
 #======================================
 # Available frequency points (MHz)
-frequency='oob 1500 1305 1005'
+frequency='oob 1830 1500 1305 1005'
 # Alternative frequency configurations:
 # frequency='1830 1710 1605 1410 1305 1200 1110 1005 900' # H100 freq points
 # frequency='510 600 705 810 900 1005 1110 1200 1380 1410'
@@ -34,11 +34,12 @@ init_scope='0.5 5'
 # Kernel configurations to test
 # Format: "kernel_name,operation"
 kernel_array=(
-  "f16_f16_f32_void_f16_256x256x128_4x2x1,gemm"
+  "f16_f16_f32_void_f16_256x256x128_4x2x1,gemm",
+  "ue8m0xe4m3_ue8m0xe4m3_f32_void_ue8m0xe4m3_256x256x128_4x2x1_0_tnt,block_scaled_gemm"
 )
 
 # Mask ratio sequence (start step end)
-mask_ratios=$(seq 0 100 50)
+mask_ratios=$(seq 0 5 50)
 
 #======================================
 # MONITORING CONFIGURATION
