Fix wrong mask_ratios config

--- a/scripts/cutlass_profiler/bash/batch_profile.cfg
+++ b/scripts/cutlass_profiler/bash/batch_profile.cfg
@@ -39,7 +39,7 @@ kernel_array=(
 )
 
 # Mask ratio sequence (start step end)
-mask_ratios=$(seq 0 5 50)
+mask_ratios=($(seq 0 5 50))
 
 #======================================
 # MONITORING CONFIGURATION
