Add profile_iterations config

--- a/scripts/cutlass_profiler/bash/batch_profile.cfg
+++ b/scripts/cutlass_profiler/bash/batch_profile.cfg
@@ -2,7 +2,7 @@
 # GPU CONFIGURATION
 #======================================
 # Target GPU ID
-gpu_id=6
+gpu_id=2
 
 # Delay between tests (seconds)
 start_delay=5
@@ -34,12 +34,27 @@ init_scope='0.5 5'
 # Kernel configurations to test
 # Format: "kernel_name,operation"
 kernel_array=(
-  "f16_f16_f32_void_f16_256x256x128_4x2x1,gemm",
-  "ue8m0xe4m3_ue8m0xe4m3_f32_void_ue8m0xe4m3_256x256x128_4x2x1_0_tnt,block_scaled_gemm"
+  # "f16_f16_f32_void_f16_256x256x128_4x2x1,gemm",
+  "e4m3_e4m3_f32_void_e4m3_256x256x128_4x2x1_0_tnt,gemm",
+  "ue8m0xe4m3_ue8m0xe4m3_f32_void_ue8m0xe4m3_256x256x128_4x2x1_0_tnt,block_scaled_gemm",
+  # "ue4m3xe2m1_ue4m3xe2m1_f32_void_ue4m3xe2m1_256x256x256_4x2x1_0_tnt,block_scaled_gemm"
 )
 
 # Mask ratio sequence (start step end)
 mask_ratios=($(seq 0 5 50))
+
+# Profile iterations for each kernel
+# Format: "warmup_iterations,profile_iterations"
+profile_iterations=(
+"10,100",
+"10,1000",
+"10,2000",
+"10,10000",
+"500,100",
+"500,1000",
+"500,2000",
+"500,10000",
+)
 
 #======================================
 # MONITORING CONFIGURATION
