--- a/scripts/cutlass_profiler/bash/batch_profile.cfg
+++ b/scripts/cutlass_profiler/bash/batch_profile.cfg
@@ -11,7 +11,8 @@ start_delay=5
 # FREQUENCY SETTINGS
 #======================================
 # Available frequency points (MHz)
-frequency='oob 1830 1500 1305 1005'
+frequency='oob 1830'
+# frequency='oob 1830 1500 1305 1005'
 # Alternative frequency configurations:
 # frequency='1830 1710 1605 1410 1305 1200 1110 1005 900' # H100 freq points
 # frequency='510 600 705 810 900 1005 1110 1200 1380 1410'
@@ -26,7 +27,7 @@ frequency_cmd="nvidia-smi -i ${gpu_id} -lgc frequency,frequency"
 # KERNEL TEST PARAMETERS
 #======================================
 # Profile modes to test
-profile_mode='0 1'
+profile_mode='1'
 
 # Initial scope values
 init_scope='0.5 5'
@@ -35,25 +36,18 @@ init_scope='0.5 5'
 # Format: "kernel_name,operation"
 kernel_array=(
   # "f16_f16_f32_void_f16_256x256x128_4x2x1,gemm",
-  "e4m3_e4m3_f32_void_e4m3_256x256x128_4x2x1_0_tnt,gemm",
+  # "e4m3_e4m3_f32_void_e4m3_256x256x128_4x2x1_0_tnt,gemm",
   "ue8m0xe4m3_ue8m0xe4m3_f32_void_ue8m0xe4m3_256x256x128_4x2x1_0_tnt,block_scaled_gemm",
   # "ue4m3xe2m1_ue4m3xe2m1_f32_void_ue4m3xe2m1_256x256x256_4x2x1_0_tnt,block_scaled_gemm"
 )
 
 # Mask ratio sequence (start step end)
-mask_ratios=($(seq 0 5 50))
+mask_ratios=($(seq 0 25 50))
 
 # Profile iterations for each kernel
 # Format: "warmup_iterations,profile_iterations"
 profile_iterations=(
-"10,100",
-"10,1000",
-"10,2000",
-"10,10000",
-"500,100",
-"500,1000",
 "500,2000",
-"500,10000",
 )
 
 #======================================
