Update profile config file

--- a/scripts/cutlass_profiler/bash/baseline.cfg
+++ b/scripts/cutlass_profiler/bash/baseline.cfg
@@ -8,7 +8,7 @@ gpu_id=2
 start_delay=5
 
 # Script to run for profiling
-script_runner="cutlass_profiler_16k.sh"
+script_runner="runners/baseline_16k.sh"
 
 #======================================
 # FREQUENCY SETTINGS
@@ -29,27 +29,24 @@ frequency_cmd="nvidia-smi -i ${gpu_id} -lgc frequency,frequency"
 # KERNEL TEST PARAMETERS
 #======================================
 # Profile modes to test
-profile_mode='1'
-
-# Initial scope values
-init_scope='0.5 5'
+profile_mode='0'
 
 # Kernel configurations to test
 # Format: "kernel_name,operation"
 kernel_array=(
+  "ue4m3xe2m1_ue4m3xe2m1_f32_void_ue4m3xe2m1_256x256x256_4x2x1_0_tnt,block_scaled_gemm",
   "ue8m0xe4m3_ue8m0xe4m3_f32_void_ue8m0xe4m3_256x256x128_4x2x1,block_scaled_gemm",
   "f16_f16_f32_void_f16_256x256x128_4x2x1,gemm",
-  # "e4m3_e4m3_f32_void_e4m3_256x256x128_4x2x1_0_tnt,gemm",
-  # "ue4m3xe2m1_ue4m3xe2m1_f32_void_ue4m3xe2m1_256x256x256_4x2x1_0_tnt,block_scaled_gemm"
 )
 
-verify_kernel_array=(
-  "ue8m0xe4m3_ue8m0xe4m3_f32_void_f32_256x256x128_4x2x1,block_scaled_gemm",
-  "f16_f16_f32_f16_f16_256x256x128_4x2x1,gemm",
-)
+# Alternative non-declare syntax that may work better when sourced
+# Uncomment if the above declaration doesn't work
+# kernel_init_scope_ue4m3xe2m1="6"
+# kernel_init_scope_ue8m0xe4m3="0.5 5"
+# kernel_init_scope_f16="0.5 5"
 
 # Mask ratio sequence (start step end)
-mask_ratios=($(seq 0 10 50))
+mask_ratios=($(seq 0 10 0))
 
 # Profile iterations for each kernel
 # Format: "warmup_iterations,profile_iterations"
