--- a/scripts/cutlass_profiler/bash/assets/config/common.cfg
+++ b/scripts/cutlass_profiler/bash/assets/config/common.cfg
@@ -34,6 +34,16 @@ kernel_array=(
   "f16_f16_f32_void_f16_256x256x128_4x2x1,gemm",
 )
 
+# Mask ratio sequence (start step end)
+mask_ratios=($(seq 0 25 50))
+# mask_ratios=($(seq 0 10 50))
+
+# Profile iterations for each kernel
+# Format: "warmup_iterations,profile_iterations"
+profile_iterations=(
+"500,2000",
+)
+
 #======================================
 # MONITORING CONFIGURATION
 #======================================
