Update config files

--- a/scripts/cutlass_profiler/bash/assets/config/baseline.cfg
+++ b/scripts/cutlass_profiler/bash/assets/config/baseline.cfg
@@ -1,6 +1,13 @@
 scenario='Baseline'
 
 #======================================
+# KERNEL TEST PARAMETERS
+#======================================
+
+# Mask ratio sequence (start step end)
+mask_ratios=($(seq 0 25 0))
+
+#======================================
 # ENVIRONMENT VARIABLES CONFIGURATION
 #======================================
 export EXTRA_DIST_ARGS=",exclude_zero:-1,mask_ratio:-1"
