--- a/scripts/cutlass_profiler/bash/assets/config/baseline.zeromask.cfg
+++ b/scripts/cutlass_profiler/bash/assets/config/baseline.zeromask.cfg
@@ -1,6 +1,14 @@
 scenario='ZeroMaskBaseline'
 
 #======================================
+# KERNEL TEST PARAMETERS
+#======================================
+
+# Mask ratio sequence (start step end)
+mask_ratios=($(seq 0 25 50))
+# mask_ratios=($(seq 0 10 50))
+
+#======================================
 # ENVIRONMENT VARIABLES CONFIGURATION
 #======================================
 export extra_dist_args=",exclude_zero:1"
