--- a/scripts/cutlass_profiler/bash/assets/config/hacking.cfg
+++ b/scripts/cutlass_profiler/bash/assets/config/hacking.cfg
@@ -1,6 +1,13 @@
 scenario='Hacking'
 
 #======================================
+# KERNEL TEST PARAMETERS
+#======================================
+
+# Mask ratio sequence (start step end)
+mask_ratios=($(seq 0 10 50))
+
+#======================================
 # ENVIRONMENT VARIABLES CONFIGURATION
 #======================================
-export extra_dist_args=",exclude_zero:1"
+export EXTRA_DIST_ARGS=",exclude_zero:1"
