--- a/scripts/cutlass_profiler/bash/assets/config/baseline.zeromask.cfg
+++ b/scripts/cutlass_profiler/bash/assets/config/baseline.zeromask.cfg
@@ -5,10 +5,9 @@ scenario='ZeroMaskBaseline'
 #======================================
 
 # Mask ratio sequence (start step end)
-mask_ratios=($(seq 0 25 50))
-# mask_ratios=($(seq 0 10 50))
+mask_ratios=($(seq 0 10 50))
 
 #======================================
 # ENVIRONMENT VARIABLES CONFIGURATION
 #======================================
-export extra_dist_args=",exclude_zero:1"
+export EXTRA_DIST_ARGS=",exclude_zero:1"
