Test transpose/no-transpose A and B

--- a/scripts/cutlass_profiler/bash/assets/config/common.cfg
+++ b/scripts/cutlass_profiler/bash/assets/config/common.cfg
@@ -11,7 +11,8 @@ start_delay=5
 # FREQUENCY SETTINGS
 #======================================
 # Available frequency points (MHz)
-frequency='oob 1830 1500 1305 1005'
+frequency='oob 1305 1500'
+# frequency='oob 1830 1500 1305 1005'
 # Alternative frequency configurations:
 # frequency='1830 1710 1605 1410 1305 1200 1110 1005 900' # H100 freq points
 # frequency='510 600 705 810 900 1005 1110 1200 1380 1410'
@@ -30,14 +31,20 @@ frequency_cmd="nvidia-smi -i ${gpu_id} -lgc frequency,frequency"
 # Format: "kernel_name,operation"
 kernel_array=(
   "ue4m3xe2m1_ue4m3xe2m1_f32_void_ue4m3xe2m1_256x256x256_4x2x1_0_tnt,block_scaled_gemm",
-  "ue8m0xe4m3_ue8m0xe4m3_f32_void_ue8m0xe4m3_256x256x128_4x2x1,block_scaled_gemm",
-  "f16_f16_f32_void_f16_256x256x128_4x2x1,gemm",
+  "ue8m0xe4m3_ue8m0xe4m3_f32_void_ue8m0xe4m3_256x256x128_4x2x1_0_ttt,block_scaled_gemm",
+  "ue8m0xe4m3_ue8m0xe4m3_f32_void_ue8m0xe4m3_256x256x128_4x2x1_0_tnt,block_scaled_gemm",
+  "ue8m0xe4m3_ue8m0xe4m3_f32_void_ue8m0xe4m3_256x256x128_4x2x1_0_ntt,block_scaled_gemm",
+  "ue8m0xe4m3_ue8m0xe4m3_f32_void_ue8m0xe4m3_256x256x128_4x2x1_0_nnt,block_scaled_gemm",
+  "f16_f16_f32_void_f16_256x256x128_4x2x1_0_ttt,gemm",
+  "f16_f16_f32_void_f16_256x256x128_4x2x1_0_tnt,gemm",
+  "f16_f16_f32_void_f16_256x256x128_4x2x1_0_ntt,gemm",
+  "f16_f16_f32_void_f16_256x256x128_4x2x1_0_nnt,gemm",
 )
 
 # Profile iterations for each kernel
 # Format: "warmup_iterations,profile_iterations"
 profile_iterations=(
-"500,2000",
+"500,6000",
 )
 
 #======================================
