Measure multiple problem shapes

--- a/scripts/cutlass_profiler/bash/assets/config/common.cfg
+++ b/scripts/cutlass_profiler/bash/assets/config/common.cfg
@@ -2,7 +2,7 @@
 # GPU CONFIGURATION
 #======================================
 # Target GPU ID
-gpu_id=2
+gpu_id=1
 
 # Delay between tests (seconds)
 start_delay=5
@@ -31,20 +31,26 @@ frequency_cmd="nvidia-smi -i ${gpu_id} -lgc frequency,frequency"
 # Format: "kernel_name,operation"
 kernel_array=(
   "ue4m3xe2m1_ue4m3xe2m1_f32_void_ue4m3xe2m1_256x256x256_4x2x1_0_tnt,block_scaled_gemm",
-  "ue8m0xe4m3_ue8m0xe4m3_f32_void_ue8m0xe4m3_256x256x128_4x2x1_0_ttt,block_scaled_gemm",
-  "ue8m0xe4m3_ue8m0xe4m3_f32_void_ue8m0xe4m3_256x256x128_4x2x1_0_tnt,block_scaled_gemm",
-  "ue8m0xe4m3_ue8m0xe4m3_f32_void_ue8m0xe4m3_256x256x128_4x2x1_0_ntt,block_scaled_gemm",
-  "ue8m0xe4m3_ue8m0xe4m3_f32_void_ue8m0xe4m3_256x256x128_4x2x1_0_nnt,block_scaled_gemm",
-  "f16_f16_f32_void_f16_256x256x128_4x2x1_0_ttt,gemm",
-  "f16_f16_f32_void_f16_256x256x128_4x2x1_0_tnt,gemm",
-  "f16_f16_f32_void_f16_256x256x128_4x2x1_0_ntt,gemm",
-  "f16_f16_f32_void_f16_256x256x128_4x2x1_0_nnt,gemm",
+  # "ue8m0xe4m3_ue8m0xe4m3_f32_void_ue8m0xe4m3_256x256x128_4x2x1_0_ttt,block_scaled_gemm",
+  # "ue8m0xe4m3_ue8m0xe4m3_f32_void_ue8m0xe4m3_256x256x128_4x2x1_0_tnt,block_scaled_gemm",
+  # "ue8m0xe4m3_ue8m0xe4m3_f32_void_ue8m0xe4m3_256x256x128_4x2x1_0_ntt,block_scaled_gemm",
+  # "ue8m0xe4m3_ue8m0xe4m3_f32_void_ue8m0xe4m3_256x256x128_4x2x1_0_nnt,block_scaled_gemm",
+  # "f16_f16_f32_void_f16_256x256x128_4x2x1_0_ttt,gemm",
+  # "f16_f16_f32_void_f16_256x256x128_4x2x1_0_tnt,gemm",
+  # "f16_f16_f32_void_f16_256x256x128_4x2x1_0_ntt,gemm",
+  # "f16_f16_f32_void_f16_256x256x128_4x2x1_0_nnt,gemm",
+)
+
+problem_shape_array=(
+  "16384,16384,16384",
+  "8192,16384,16384",
+  "1024,16384,16384"
 )
 
 # Profile iterations for each kernel
 # Format: "warmup_iterations,profile_iterations"
 profile_iterations=(
-"500,6000",
+"500,20000",
 )
 
 #======================================
@@ -53,7 +59,3 @@ profile_iterations=(
 # GPU monitoring command
 gpu_monitor_cmd="nvidia-smi --id=${gpu_id} --loop-ms=100 -q -a| grep -v -e{Fan,N/A,JPEG,OFA} > nvsmi.csv"
 
-#======================================
-# ENVIRONMENT VARIABLES CONFIGURATION
-#======================================
-export PROBLEM_SHAPE_ARGS="--m=16384 --n=16384 --k=16384"
