Save necessary commands to file

--- a/scripts/cutlass_profiler/bash/assets/config/common.cfg
+++ b/scripts/cutlass_profiler/bash/assets/config/common.cfg
@@ -21,7 +21,7 @@ frequency='oob 1305 1500'
 
 # Command for changing GPU frequency
 # 'frequency' word will be replaced with actual value
-frequency_cmd="nvidia-smi -i ${gpu_id} -lgc frequency,frequency"
+frequency_cmd="nvidia-smi -lgc frequency,frequency -i ${gpu_id}"
 
 #======================================
 # KERNEL TEST PARAMETERS
